<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- KEYS -->
    <string name="google_maps_api_key" translatable="false">AIzaSyBY3-xmDUoaE48fWqkaJplzLEH9dOn08vA</string>

    <!-- untranslatable -->
    <string name="current_event_year" translatable="false">2015</string>
    <string name="developer_email" translatable="false">maikocharles@gmail.com</string>
    <string name="diamond" translatable="false">Diamond</string>
    <string name="gold" translatable="false">Gold</string>
    <string name="silver" translatable="false">Silver</string>
    <string name="bronze" translatable="false">Bronze</string>
    <string name="interval" translatable="false">-</string>
    <string name="github" translatable="false">Github</string>
    <string name="map_marker_title" translatable="false">Flisol São Carlos (Senac São Carlos)</string>
    <string name="map_marker_snippet" translatable="false">Rua Episcopal, 700</string>
    <string name="hosting_place_address" translatable="false">Senac São Carlos - Rua Episcopal, 700</string>

    <!-- LINKS -->
    <string name="license_link" translatable="false">http://www.gnu.org/licenses/gpl.html</string>
    <string name="hosting_place_website_link" translatable="false">http://flisolsaocarlos.net.br</string>
    <string name="international_website_link" translatable="false">http://www.flisol.info/</string>
    <string name="twitter_url" translatable="false">https://twitter.com/flisolsaocarlos</string>
    <string name="google_plus_url" translatable="false">https://plus.google.com/u/0/105178954936186224490</string>
    <string name="software_livre_url" translatable="false">http://softwarelivre.org/flisolsaocarlos</string>
    <string name="facebook_url" translatable="false">https://www.facebook.com/flisolsaocarlos</string>
    <string name="github_project_link" translatable="false">https://github.com/maikotrindade/flisol-guide</string>
    <string name="contact_flisol_url" translatable="false">http://www.flisolsaocarlos.net.br/contato</string>

    <!-- Dialogs and Messages to users -->
    <string name="msg_yes">yes</string>
    <string name="msg_no">no</string>
    <string name="msg_website_supporter">You\'ll be redirected to supporter\'s website. Are you sure?</string>
    <string name="subject">Subject</string>
    <string name="your_name">Your name</string>
    <string name="message">Message</string>
    <string name="invalid_email">Invalid E-mail</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_subject">Invalid Subject</string>
    <string name="invalid_message">Invalid Message</string>
    <string name="your_email">Your e-mail</string>
    <string name="send_email">Send e-mail...</string>
    <string name="send_email_error">There are no email clients installed.</string>

    <!-- Activity Title -->
    <string name="title_activity_course">Course</string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="title_activity_license">License</string>
    <string name="title_activity_about_app">About the Application</string>
    <string name="title_activity_about">About FLISOL</string>
    <string name="title_activity_course_list">Courses</string>
    <string name="title_activity_install_fest">Install Fest</string>
    <string name="title_activity_lecture">Lectures</string>
    <string name="title_activity_location">Location</string>
    <string name="title_activity_supporters">Supporters</string>
    <string name="title_activity_more_information">More information</string>
    <string name="title_activity_software_list">List of Softwares</string>

    <string name="app_name" translatable="false">FLISOL São Carlos</string>
    <string name="flisol">FLISOL São Carlos</string>
    <string name="date">April 25th</string>
    <string name="coming_soon">More information coming soon</string>
    <string name="costs_label">Cost</string>
    <string name="official_website">Official Website</string>
    <string name="costs">Free</string>
    <string name="date_label">Date</string>
    <string name="agenda">Agenda</string>
    <string name="courses">Courses</string>
    <string name="install_fest">Install Fest</string>
    <string name="lectures">Lectures</string>
    <string name="location">Location</string>
    <string name="supporters">Supporters</string>
    <string name="about">About</string>
    <string name="license">License</string>
    <string name="schedule">Schedule</string>
    <string name="name">Name</string>
    <string name="website">Website</string>
    <string name="notes">Notes</string>
    <string name="category">Category</string>
    <string name="version">Version</string>
    <string name="software_list">List of Softwares</string>
    <string name="international_flisol">FLISOL International</string>
    <string name="about_intro">The FLISOL (Latin American Festival of Free Software Installation) is the largest free event and non-profit Free Software disclosure in Latin America organized by the community. It happens in many cities in Brazil and Latin America since 2004 and its main objective is to promote the use of free software, presenting its philosophy, scope, progress and development to the general public.</string>
    <string name="action_settings">Settings</string>
    <string name="field">Field</string>
    <string name="lecture">Lecture</string>
    <string name="home">Home</string>
    <string name="room">Room</string>
    <string name="hosting_place">Place</string>
    <string name="lecturer">Lecturer</string>
    <string name="share">Share</string>
    <string name="vacancies">Vacancies</string>
    <string name="collaborate">Collaborate</string>
    <string name="contact">Contact</string>
    <string name="google_maps_key_instructions">Before you run your application, you need a Google Maps API key. To get one, follow this link: https://console.developers.google.com</string>
    <string name="contact_flisol">Contact the organizing committee of FLISOL for questions, suggestions, criticism or partnerships.</string>
    <string name="collaborate_text">Anyone is welcome to collaborate with organizing committee of FLISOL, it is not necessary to be a student even to be an expert in the subject to help the organization or participate of the event.</string>
    <string name="app_info">App Information</string>
    <string name="by">by</string>
    <string name="submit">Submit</string>
    <string name="flisolappAbout">Android Application under the GPL v3 that provides information about the FLISOL São Carlos. The application presents information about lectures and courses since the year 2012, in addition displaying the location, support and schedule of the impending issue. Please contact the developers through the form below to criticism, partnerships or suggestions.</string>
    <string name="freedomQuote">\"Knowledge is the only fountain, both of the love and the principles of human liberty\" by Daniel Webster</string>
    <string name="installFestText">The main FLISOL\'s goal is to promote the Free Software usage providing information about his philosophy, scope, progress and development to general public.
Therefore, in addition to lectures and courses, simultaneously the Install Fest occurs: Community people can bring their computers to the FLISOL team can install free software, especially Linux distributions for free.
In addition, the Install Fest is for the exchange of information and experiences among the participants of the event, especially for beginners of free software.
</string>
    <string name="title_activity_agenda_room_one">AgendaRoomOneActivity</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
