<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.trindade.flisol.ui.AboutAppActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/appName"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/versionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appName"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/flisolappAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/versionName"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/flisolappAbout" />

        <Button
            android:id="@+id/licenseBtn"
            style="@style/DefaultButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/flisolappAbout"
            android:text="@string/license" />

        <TextView
            android:id="@+id/freedomKnowlogdeQuote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/licenseBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/freedomQuote"
            android:textSize="11sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/freedomKnowlogdeQuote"
            android:background="@drawable/custom_block_text"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/message"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameEdit"
                style="@style/DefaultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/your_name"/>

            <EditText
                android:id="@+id/emailEdit"
                style="@style/DefaultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/subjectEdit"
                style="@style/DefaultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/subject"/>

            <EditText
                android:id="@+id/messageEdit"
                style="@style/DefaultText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/message"
                android:inputType="textMultiLine"/>

            <Button
                android:id="@+id/submitBtn"
                style="@style/DefaultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>
