<TableLayout     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:stretchColumns="2"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.trindade.flisol.ui.SoftwareListActivity">

    <TableRow>
        <TextView
            android:layout_column="1"
            android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />
        <TextView
            android:id="@+id/name"
            android:layout_column="2"
            android:gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_column="1"
            android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website" />
        <TextView
            android:id="@+id/website"
            android:layout_column="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_column="1"
            android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version" />
        <TextView
            android:id="@+id/version"
            android:layout_column="2"
            android:gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_column="1"
            android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category" />
        <TextView
            android:id="@+id/category"
            android:layout_column="2"
            android:gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_column="1"
            android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes" />
        <TextView
            android:id="@+id/notes"
            android:layout_column="2"
            android:gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp" />
    </TableRow>

</TableLayout>