<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.trindade.flisol.ui.CourseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/title"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_block_text">

            <TextView
                android:id="@+id/lecturer_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="4dp"
                android:text="@string/lecturer"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lecturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lecturer_label"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/schedule_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/lecturer"
                android:layout_marginBottom="4dp"
                android:text="@string/schedule"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/schedule_begin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/schedule_label" />

            <TextView
                android:id="@+id/interval_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/schedule_label"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/schedule_begin"
                android:text="@string/interval" />

            <TextView
                android:id="@+id/schedule_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/schedule_label"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/interval_label" />

            <TextView
                android:id="@+id/room_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/schedule_end"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="4dp"
                android:text="@string/room"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/room_label"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/vacancies_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/room"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="3dp"
                android:text="@string/vacancies"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vacancies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/vacancies_label" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
